--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     font-family: 'Rubik', sans-serif;
 }
 
+:root {
+    --color-dark: hsl(0, 0%, 59%);
+    --color-verydark: hsl(0, 0%, 17%);
+}
+
 header {
     background-image: url(./images/pattern-bg.png);
     background-size: cover;
@@ -13,6 +18,7 @@ header {
     align-items: center;
     position: relative;
     padding-bottom: 5rem;
+    min-width: 375px;
 }
 
 h1 {
@@ -36,7 +42,7 @@ input {
     height: 100%;
     min-width: 255px;
     width: 100%;
-    max-width: 700px;
+    max-width: 380px;
     border-radius: 1rem 0 0 1rem;
     border: none;
     padding-left: 1.5rem;
@@ -45,7 +51,7 @@ input {
 button {
     height: calc(100% + 1px);
     background-color: black;
-    width: 50px;
+    min-width: 50px;
     border-radius: 0 1rem 1rem 0;
     border: none;
 }
@@ -54,6 +60,37 @@ button::before {
 }
 
 .header__ipspecs {
+    border-radius: 1rem;
+    padding: 1rem;
+    background-color: white;
     position: absolute;
-    bottom: -100px;
+    top: 150px;
+    width: 92%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.header__ipspecs [class*="_title"] {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    color: var(--color-dark);
+}
+
+main {
+    background-color: teal;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    z-index: -1
+}
+
+footer {
+    position: absolute;
+    bottom: -3rem;
+    display: flex;
+    align-items: center;
 }
